--- a/src/Feed.css
+++ b/src/Feed.css
@@ -13,7 +13,7 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
-.feed__header {
+.feed_header {
     position: sticky;
     top: 0;
     background-color: white;
