--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -25,3 +25,16 @@
 .tweetBox__input > .icon {
     font-size: 28px;
 }
+
+.tweetBox__tweetButton{
+    background-color: var(--twitter-color) !important;
+    border: none !important;
+    color: white !important;
+    font-weight: 900  !important;
+    text-transform: inherit !important;
+    border-radius: 30px !important;
+    width: 80px;
+    height: 50px !important;
+    margin-top: 20px !important;
+    margin-left: auto !important;
+}
